redundancy fix